Fix index buttons and alignments.

--- a/public_html/style/desktop-main.css
+++ b/public_html/style/desktop-main.css
@@ -137,6 +137,7 @@ ol, ul {
 	.button {
 		border: 0;
 		cursor: pointer;
+		display: inline-block;
 		font-weight: 400;
 		letter-spacing: 0.125em;
 		text-transform: uppercase;
